--- a/final_project/ShoppingOnline/src/main/webapp/resources/css/custom.css
+++ b/final_project/ShoppingOnline/src/main/webapp/resources/css/custom.css
@@ -8,3 +8,18 @@
     font-weight: bolder;
     border-radius: 50%;
 }
+
+.img-thumbnail-sm {
+    width: 50px;
+    height: 50px;
+}
+
+.img-thumbnail-md {
+    width: 100px;
+    height: 100px;
+}
+
+.form-control[readonly="true"] {
+    background-color: transparent;
+    cursor: not-allowed;
+}
